--- a/app/src/main/res/layout/fragment_sample_details.xml
+++ b/app/src/main/res/layout/fragment_sample_details.xml
@@ -31,7 +31,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="sans-serif-thin"
             android:textColor="@color/floralWhite"
             android:textSize="20sp"
             android:textStyle="bold"
